nullaway_error_C25E0CD3-8575-4FCF-9C85-20B8AB186A39.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-expression/src/main/java/org/springframework/expression/spel/ast/OpEQ.java:78: error: [NullAway] dereferenced expression leftDesc is @Nullable
			CodeFlow.insertBoxIfNecessary(mv, leftDesc.charAt(0));
			                                          ^
    (see http://t.uber.com/nullaway )
